Refactor: deduplicate MCP test fixtures and align idioms across the new adapter code
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>